--- a/src/main/resources/static/css/comun.css
+++ b/src/main/resources/static/css/comun.css
@@ -1,4 +1,65 @@
-*{
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img,
+ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody,
+tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
     margin: 0;
     padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    background: linear-gradient(to bottom, #0081FF, #89C2FB);
+    min-width: 100vw;
+    min-height: 100vh;
+}
+
+header {
+    width: 100%;
+    text-align: center;
+    font-size: 40px;
+    padding: 10px;
+}
+
+footer {
+    width: 100%;
+    padding: 25px;
+    text-align: center;
+}
+
+header h1 {
+    padding-top: 20px;
+}
+
+main {
+    display: flex;
+}
+
+.centro {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+}
+
+tbody tr:nth-child(odd) {
+    background-color: #EEEEEE;
+}
+
+tbody tr:nth-child(even) {
+    background-color: #D7D7D7;
+}
+
+.btn {
+    margin: 5px;
+    font-size: 20px;
+    width: 160px;
+    height: 30px;
+    color: wheat;
 }
