--- a/src/main/resources/static/css/loggin.css
+++ b/src/main/resources/static/css/loggin.css
@@ -1,29 +1,46 @@
+header {
+    width: 100%;
+    height: 15%;
+    text-align: center;
+    font-size: 40px;
+}
+
 header h1 {
+    padding-top: 20px;
+}
+
+footer {
+    width: 100%;
     text-align: center;
 }
 
 main {
-    background-color: aqua;
+    background-color: #00B9FF;
     padding: 10px;
-    max-width: 30%;
-    height: 60%;
-    margin: 0 auto;
+    width: 20%;
+    height: 20%;
+    margin: 10% auto;
 }
 
 main form {
     text-align: center;
 }
 
+main form label {
+    font-size: 30px;
+}
+
 main form div {
-    max-width: 100%;
+    width: 100%;
     margin: 10px auto;
 }
 
 main form div input {
-    max-width: 100%;
+    width: 70%;
+    height: 30px;
     text-align: center;
 }
 
 .btn {
-    width: 62.5%;
+    color: white;
 }
