--- a/src/main/resources/static/css/Alumnos/listalumnos.css
+++ b/src/main/resources/static/css/Alumnos/listalumnos.css
@@ -1,14 +1,15 @@
 html {
     font-family: 'helvetica neue', helvetica, arial, sans-serif;
 }
+.tabla{
+    width: 80%;
+}
 
 .tabla table {
     margin: 10px;
     padding: 10px;
     border-collapse: collapse;
     font-size: 20px;
-    width: 80%;
-    overflow-x: scroll;
 }
 
 .tabla table thead tr th {
@@ -24,8 +25,8 @@ html {
     text-align: center;
     padding: 10px;
     font-size: 18px;
-    overflow: auto;
-    max-width: 350px;
+    white-space: pre-wrap;
+    word-wrap: break-word;
 }
 
 .btn_tabla {
@@ -41,7 +42,7 @@ html {
 }
 
 .btn_update {
-    background-color: blue;
+    background-color: #4037ff;
 }
 
 form {
