--- a/src/main/resources/templates/crud.html
+++ b/src/main/resources/templates/crud.html
@@ -3,41 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link th:href="${css_permisos}" rel="stylesheet">
+    <link href="../static/css/comun.css" rel="stylesheet">
+    <link href="../static/css/permisosadmin.css" th:href="${css_permisos}" rel="stylesheet">
+    <link href="../static/css/crud.css" rel="stylesheet">
     <script type="text/javascript" src="../static/js/crudjs.js"></script>
 </head>
 <body>
-<h1 style="text-align: center"><span> Usted se ha loggeado como "ad o user"</span></h1>
-<form name="formulario" id="botones" action="#" method="get">
-    <div class="admin">
-        <div style="margin: 10px">
-            <h3 style="text-align: center">Alumnos</h3>
-            <input type="submit" class="button" id="AlumnoAdd" th:name="url" value="Añadir alumno"
-                   onclick="addalumnos()">
-            <input type="submit" class="button" id="ListAlumnos" th:name="url" value="Listar alumnos"
-                   onclick="listalumnos()">
-        </div>
-        <div style="margin: 10px">
-            <h3 style="text-align: center">Asignaturas</h3>
-            <input type="submit" class="button" id="AsignaturaAdd" th:name="url" value="Añadir Asignatura"
-                   onclick="addasignaturas()">
-            <input type="submit" class="button" id="ListAsignaturas" th:name="url" value="Listar Asignatura"
-                   onclick="listasignaturas()">
-        </div>
-        <div style="margin: 10px">
-            <h3 style="text-align: center">Usuarios</h3>
-            <input type="submit" class="button" id="UsuariosAdd" th:name="url" value="Añadir Usuarios"
-                   onclick="addusers()">
-            <input type="submit" class="button" id="ListUsuarios" th:name="url" value="Listar Usuarios"
-                   onclick="listusers()">
-        </div>
+<header>
+    <h1>Colegio Universitario Internacional BITCOIN</h1>
+    <div>
+        <h6>Usted se ha loggeado como "ad o user"</h6>
     </div>
-    <div class="user">
-        <input type="submit" class="button" id="ListAlumnosu" th:name="url" value="Listar alumnos"
-               onclick="listalumnos()">
-        <input type="submit" class="button" id="ListAsignaturasu" th:name="url" value="Listar Asignatura"
-               onclick="listasignaturas()">
+</header>
+<main>
+    <div class="centro">
+        <form name="formulario" id="botones" action="#" method="get">
+            <div class="admin">
+                <div style="margin: 10px">
+                    <h3 style="text-align: center">Alumnos</h3>
+                    <input type="submit" class="button" id="AlumnoAdd" th:name="url" value="Añadir alumno"
+                           onclick="addalumnos()">
+                    <input type="submit" class="button" id="ListAlumnos" th:name="url" value="Listar alumnos"
+                           onclick="listalumnos()">
+                </div>
+                <div style="margin: 10px">
+                    <h3 style="text-align: center">Asignaturas</h3>
+                    <input type="submit" class="button" id="AsignaturaAdd" th:name="url" value="Añadir Asignatura"
+                           onclick="addasignaturas()">
+                    <input type="submit" class="button" id="ListAsignaturas" th:name="url" value="Listar Asignatura"
+                           onclick="listasignaturas()">
+                </div>
+                <div style="margin: 10px">
+                    <h3 style="text-align: center">Usuarios</h3>
+                    <input type="submit" class="button" id="UsuariosAdd" th:name="url" value="Añadir Usuarios"
+                           onclick="addusers()">
+                    <input type="submit" class="button" id="ListUsuarios" th:name="url" value="Listar Usuarios"
+                           onclick="listusers()">
+                </div>
+            </div>
+            <div class="user">
+                <input type="submit" class="button" id="ListAlumnosu" th:name="url" value="Listar alumnos"
+                       onclick="listalumnos()">
+                <input type="submit" class="button" id="ListAsignaturasu" th:name="url" value="Listar Asignatura"
+                       onclick="listasignaturas()">
+            </div>
+        </form>
     </div>
-</form>
+</main>
+<footer>
+    <h6>Creado por Carlos Castillo</h6>
+</footer>
 </body>
 </html>
